2007-03-19  Murray Cumming  <murrayc@murrayc-desktop>

	* libgda/gda-data-model-private.h:
	* providers/ldap/gda-ldap-recordset.c:
	(gda_ldap_recordset_class_init):
	* providers/msql/gda-msql-recordset.c:
	(gda_msql_recordset_class_init):
	* providers/oracle/gda-oracle-recordset.c:
	(gda_oracle_recordset_class_init):
	#ifdef-ed out the definitions of the functions that used gda_data_model_get_command_text(), 
	to prevent linker errors, and added comments pointing to the relevant bug report.

2007-03-19  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sql-delimiter/Makefile.am: applied patch from
	Mark Johnson <mrj001@shaw.ca> to correct a compiling problem
	* providers/ldap/gda-ldap-recordset.c:
	* providers/oracle/gda-oracle-recordset.c:
	* providers/msql/gda-msql-recordset.c: disabled adding values
	to GdaDataModel returned when executing a SELECT command, to 
	avoid calling the non-existant gda_data_model_get_command_text()
	for bug #411811

2007-03-16  yselkowitz  <yselkowitz@users.sourceforge.net>

	* acconfig.h:
	* configure.in:
	* providers/mdb/gda-mdb-provider.c:
	(gda_mdb_provider_open_connection), (gda_mdb_provider_execute_sql):
	Added configure tests to allow us to ifdef around changes in the MDB 
	API. Hopefully this will not happen often.
	Bug #412122.

2007-03-15  yselkowitz  <yselkowitz@users.sourceforge.net>

	* configure.in: Add AM_PROG_CC_C_O to avoid a warning.
	* libgda/sql-delimiter/Makefile.am: Modify rules to fix the vpath 
	build.
	Patches in bug #418116.

2007-03-15  Vivien Malerba <malerba@gnome-db.org>

	Applied patch from Yaakov (Cygwin Ports) and Gustavo R. Montesino:

	* Makefile.am
	* configure.in
	* doc/C/Makefile.am
	* libgda-3.0.pc.in
	* libgda/Makefile.am
	* libgda/graph/Makefile.am
	* libgda/handlers/Makefile.am
	* libgda/sql-delimiter/Makefile.am
	* libgda/sql-transaction/Makefile.am
	* providers/freetds/Makefile.am
	* providers/mdb/Makefile.am
	* providers/mysql/Makefile.am
	* providers/postgres/Makefile.am